--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@
 @import '../node_modules/@syncfusion/ej2-navigations/styles/material.css';
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
 *{
 
@@ -14,4 +14,26 @@ margin: 0;
 padding: 0;
 }
 body{    scrollbar-gutter: stable both-edges;
+    min-height: 100vh;
+    background: #e6e6e6;
 }
+
+
+.shadow{
+    border-radius: 5px;
+    box-shadow: 0 0.46875rem 2.1875rem rgba(4,9,20,.03), 0 0.9375rem 1.40625rem rgba(4,9,20,.03), 0 0.25rem 0.53125rem rgba(4,9,20,.05), 0 0.125rem 0.1875rem rgba(4,9,20,.03);
+}
+
+.e-card g:last-child ,.e-card g text{
+    display: none;
+}
+.shadowbox{
+    border-radius: 5px;
+    box-shadow: 
+    0 0.46875rem 2.1875rem rgba(4,9,20,.03), 
+    0 0.9375rem 1.40625rem rgba(4,9,20,.03),
+   
+}
+.text-header{
+    border-bottom: 1px solid #3D3E3C;
+  }
